--- a/style.css
+++ b/style.css
@@ -85,31 +85,26 @@ p {
 
 
 .menu {
-    list-style: none;
     position: fixed;
-    top: 10px;
-    right: 30px;
-    cursor: pointer;
+    background: white;
+    width: 100%;
+    margin-top: 0px;
+    top: 0px;
     z-index: 10;
-    
 }
 
-
-
-.links {
-    float: left;
-    color: fuchsia;
-    padding-top: 5px;
-    padding-left: 9px;
-    padding-right: 9px;
-    padding-bottom: 5px;
+.links { 
+    display: inline;
+    padding-left: 33px;
+    padding-right: 25px;
     font-family: fantasy;
-    font-size: 20px
+    font-size: 20px 
+} 
+.links:hover{
+    font-size: 25px;
+    text-decoration: underline;
 }
 
-.links:hover {
-    background-color: aqua;
-}
 
 html {
     scroll-behavior: smooth;
@@ -117,6 +112,7 @@ html {
 
 a {
     text-decoration: none;
+    text-shadow: 2px 2px gainsboro;
 }
 
 
